--- a/packages/assets-controllers/package.json
+++ b/packages/assets-controllers/package.json
@@ -33,6 +33,7 @@
     "@ethersproject/contracts": "^5.7.0",
     "@ethersproject/providers": "^5.7.0",
     "@metamask/abi-utils": "^1.1.0",
+    "@metamask/approval-controller": "workspace:^",
     "@metamask/base-controller": "workspace:^",
     "@metamask/contract-metadata": "^2.3.1",
     "@metamask/controller-utils": "workspace:^",
@@ -68,6 +69,7 @@
     "typescript": "~4.6.3"
   },
   "peerDependencies": {
+    "@metamask/approval-controller": "workspace:^",
     "@metamask/network-controller": "workspace:^"
   },
   "engines": {
