--- a/packages/permission-controller/package.json
+++ b/packages/permission-controller/package.json
@@ -32,13 +32,12 @@
     "@metamask/approval-controller": "workspace:^",
     "@metamask/base-controller": "workspace:^",
     "@metamask/controller-utils": "workspace:^",
-    "@metamask/types": "^1.1.0",
+    "@metamask/json-rpc-engine": "^7.0.0",
+    "@metamask/rpc-errors": "^5.0.0",
     "@metamask/utils": "^5.0.2",
     "@types/deep-freeze-strict": "^1.1.0",
     "deep-freeze-strict": "^1.1.1",
-    "eth-rpc-errors": "^4.0.2",
     "immer": "^9.0.6",
-    "json-rpc-engine": "^6.1.0",
     "nanoid": "^3.1.31"
   },
   "devDependencies": {
