--- a/packages/network-controller/package.json
+++ b/packages/network-controller/package.json
@@ -49,9 +49,11 @@
     "@json-rpc-specification/meta-schema": "^1.0.6",
     "@metamask/auto-changelog": "^3.1.0",
     "@types/jest": "^27.4.1",
+    "@types/jest-when": "^2.7.3",
     "@types/lodash": "^4.14.191",
     "deepmerge": "^4.2.2",
     "jest": "^27.5.1",
+    "jest-when": "^3.4.2",
     "lodash": "^4.17.21",
     "nock": "^13.0.7",
     "sinon": "^9.2.4",
