Remove duplicate `hasProperty` function
The `hasProperty` function in `@metamask/controller-utils` has been
removed. Instead the `hasProperty` function from `@metamask/utils` is
now used in its place. The `@metamask/utils` version of this function
is functionally identical but has a better type signature.

Relates to #1204

--- a/packages/permission-controller/package.json
+++ b/packages/permission-controller/package.json
@@ -33,6 +33,7 @@
     "@metamask/base-controller": "workspace:^",
     "@metamask/controller-utils": "workspace:^",
     "@metamask/types": "^1.1.0",
+    "@metamask/utils": "^5.0.2",
     "@types/deep-freeze-strict": "^1.1.0",
     "deep-freeze-strict": "^1.1.1",
     "eth-rpc-errors": "^4.0.2",
