--- a/packages/notification-controller/package.json
+++ b/packages/notification-controller/package.json
@@ -30,7 +30,7 @@
   },
   "dependencies": {
     "@metamask/base-controller": "workspace:^",
-    "@metamask/controller-utils": "workspace:^",
+    "@metamask/utils": "^5.0.2",
     "immer": "^9.0.6",
     "nanoid": "^3.1.31"
   },
