--- a/tsconfig.json
+++ b/tsconfig.json
@@ -56,6 +56,9 @@
       "path": "./packages/rate-limit-controller"
     },
     {
+      "path": "./packages/signature-controller"
+    },
+    {
       "path": "./packages/transaction-controller"
     }
   ],
