--- a/packages/network-controller/package.json
+++ b/packages/network-controller/package.json
@@ -35,13 +35,13 @@
     "@metamask/eth-json-rpc-middleware": "^11.0.2",
     "@metamask/eth-json-rpc-provider": "^2.1.0",
     "@metamask/eth-query": "^3.0.1",
+    "@metamask/json-rpc-engine": "^7.1.1",
     "@metamask/rpc-errors": "^6.0.0",
     "@metamask/swappable-obj-proxy": "^2.1.0",
     "@metamask/utils": "^8.1.0",
     "async-mutex": "^0.2.6",
     "eth-block-tracker": "^7.0.1",
     "immer": "^9.0.6",
-    "json-rpc-engine": "^6.1.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
