--- a/packages/accounts-controller/package.json
+++ b/packages/accounts-controller/package.json
@@ -43,6 +43,7 @@
     "@metamask/auto-changelog": "^3.1.0",
     "@metamask/keyring-controller": "^7.4.0",
     "@metamask/snaps-controllers": "^1.0.1",
+    "@metamask/utils": "^6.2.0",
     "@types/jest": "^27.4.1",
     "@types/readable-stream": "^2.3.0",
     "jest": "^27.5.1",
