--- a/packages/accounts-controller/package.json
+++ b/packages/accounts-controller/package.json
@@ -33,6 +33,7 @@
     "@metamask/keyring-api": "^0.2.5",
     "@metamask/snaps-utils": "^1.0.1",
     "@metamask/utils": "^6.2.0",
+    "deepmerge": "^4.2.2",
     "eth-rpc-errors": "^4.0.2",
     "ethereumjs-util": "^7.0.10",
     "immer": "^9.0.6",
@@ -43,7 +44,6 @@
     "@metamask/auto-changelog": "^3.1.0",
     "@metamask/keyring-controller": "^7.4.0",
     "@metamask/snaps-controllers": "^1.0.1",
-    "@metamask/utils": "^6.2.0",
     "@types/jest": "^27.4.1",
     "@types/readable-stream": "^2.3.0",
     "jest": "^27.5.1",
