--- a/packages/accounts-controller/package.json
+++ b/packages/accounts-controller/package.json
@@ -52,6 +52,9 @@
     "typedoc-plugin-missing-exports": "^0.22.6",
     "typescript": "~4.6.3"
   },
+  "peerDependencies": {
+    "@metamask/keyring-controller": "^7.4.0"
+  },
   "engines": {
     "node": ">=16.0.0"
   },
