--- a/merged-packages/eth-json-rpc-provider/package.json
+++ b/merged-packages/eth-json-rpc-provider/package.json
@@ -32,26 +32,27 @@
   "devDependencies": {
     "@lavamoat/allow-scripts": "^2.0.3",
     "@metamask/auto-changelog": "^3.1.0",
-    "@metamask/eslint-config": "^11.0.1",
-    "@metamask/eslint-config-jest": "^11.0.0",
-    "@metamask/eslint-config-nodejs": "^11.0.1",
-    "@metamask/eslint-config-typescript": "^11.0.0",
+    "@metamask/eslint-config": "^12.0.0",
+    "@metamask/eslint-config-jest": "^12.0.0",
+    "@metamask/eslint-config-nodejs": "^12.0.0",
+    "@metamask/eslint-config-typescript": "^12.0.0",
     "@types/jest": "^28.1.6",
     "@types/node": "^16.18.39",
-    "@typescript-eslint/eslint-plugin": "^5.43.0",
-    "@typescript-eslint/parser": "^5.43.0",
+    "@typescript-eslint/eslint-plugin": "^5.30.7",
+    "@typescript-eslint/parser": "^5.30.7",
     "depcheck": "^1.4.3",
-    "eslint": "^8.27.0",
+    "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jest": "^27.1.5",
-    "eslint-plugin-jsdoc": "^39.6.2",
-    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-jsdoc": "^39.3.3",
+    "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.1.1",
     "jest": "^28.1.3",
     "jest-it-up": "^2.0.2",
     "prettier": "^2.7.1",
-    "prettier-plugin-packagejson": "^2.3.0",
+    "prettier-plugin-packagejson": "^2.2.17",
     "rimraf": "^3.0.2",
     "ts-jest": "^28.0.7",
     "ts-node": "^10.7.0",
