--- a/packages/eth-json-rpc-provider/package.json
+++ b/packages/eth-json-rpc-provider/package.json
@@ -27,42 +27,42 @@
   "dependencies": {
     "@metamask/json-rpc-engine": "^7.1.0",
     "@metamask/safe-event-emitter": "^3.0.0",
-    "@metamask/utils": "^8.1.0"
+    "@metamask/utils": "^6.2.0"
   },
   "devDependencies": {
-    "@lavamoat/allow-scripts": "^2.0.3",
+    "@lavamoat/allow-scripts": "^2.3.1",
     "@metamask/auto-changelog": "^3.1.0",
     "@metamask/eslint-config": "^12.0.0",
     "@metamask/eslint-config-jest": "^12.0.0",
     "@metamask/eslint-config-nodejs": "^12.0.0",
     "@metamask/eslint-config-typescript": "^12.0.0",
-    "@types/jest": "^28.1.6",
-    "@types/node": "^16.18.39",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^16.18.24",
     "@typescript-eslint/eslint-plugin": "^5.30.7",
     "@typescript-eslint/parser": "^5.30.7",
     "depcheck": "^1.4.3",
     "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jest": "^27.1.5",
     "eslint-plugin-jsdoc": "^39.3.3",
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
-    "jest": "^28.1.3",
+    "jest": "^27.5.1",
     "jest-it-up": "^2.0.2",
     "prettier": "^2.7.1",
     "prettier-plugin-packagejson": "^2.2.17",
     "rimraf": "^3.0.2",
-    "ts-jest": "^28.0.7",
+    "ts-jest": "^27.1.4",
     "ts-node": "^10.7.0",
-    "typedoc": "^0.23.15",
+    "typedoc": "^0.22.15",
     "typescript": "~4.6.3"
   },
   "packageManager": "yarn@3.2.1",
   "engines": {
-    "node": "^16.20 || ^18.16 || >=20"
+    "node": ">=16.0.0"
   },
   "publishConfig": {
     "access": "public",
