--- a/packages/polling-controller/package.json
+++ b/packages/polling-controller/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "@metamask/auto-changelog": "^3.1.0",
     "@types/jest": "^27.4.1",
+    "deepmerge": "^4.3.1",
     "jest": "^27.5.1",
     "ts-jest": "^27.1.4",
     "typedoc": "^0.22.15",
