--- a/merged-packages/eth-json-rpc-provider/package.json
+++ b/merged-packages/eth-json-rpc-provider/package.json
@@ -43,6 +43,7 @@
     "depcheck": "^1.4.3",
     "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jest": "^27.1.5",
     "eslint-plugin-jsdoc": "^39.3.3",
