--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "prepare-preview-builds": "./scripts/prepare-preview-builds.sh",
     "publish-previews": "yarn workspaces foreach --parallel --verbose run publish:preview",
     "setup": "yarn install",
-    "test": "yarn workspaces foreach --parallel --verbose run test"
+    "test": "yarn workspaces foreach --parallel --verbose run test",
+    "test:clean": "yarn workspaces foreach --parallel --verbose run test:clean && yarn test"
   },
   "simple-git-hooks": {
     "pre-push": "yarn lint"
