--- a/packages/queued-request-controller/package.json
+++ b/packages/queued-request-controller/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@metamask/selected-network-controller",
-  "version": "2.0.1",
-  "description": "Provides an interface to the currently selected networkClientId for a given domain",
+  "name": "@metamask/queued-request-controller",
+  "version": "1.0.0",
+  "description": "Includes a controller and middleware that implements a request queue",
   "keywords": [
     "MetaMask",
     "Ethereum"
   ],
-  "homepage": "https://github.com/MetaMask/core/tree/main/packages/selected-network-controller#readme",
+  "homepage": "https://github.com/MetaMask/core/tree/main/packages/queued-request-controller#readme",
   "bugs": {
     "url": "https://github.com/MetaMask/core/issues"
   },
@@ -22,15 +22,17 @@
   ],
   "scripts": {
     "build:docs": "typedoc",
-    "changelog:validate": "../../scripts/validate-changelog.sh @metamask/selected-network-controller",
+    "changelog:validate": "../../scripts/validate-changelog.sh @metamask/queued-request-controller",
     "publish:preview": "yarn npm publish --tag preview",
     "test": "jest",
-    "test:clean": "jest --clearCache",
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@metamask/base-controller": "^3.2.3",
-    "@metamask/network-controller": "^14.0.0",
+    "@metamask/approval-controller": "^3.5.1",
+    "@metamask/base-controller": "^3.2.1",
+    "@metamask/controller-utils": "^4.3.2",
+    "@metamask/network-controller": "^12.1.2",
+    "@metamask/selected-network-controller": "^1.0.1",
     "@metamask/swappable-obj-proxy": "^2.1.0",
     "json-rpc-engine": "^6.1.0"
   },
@@ -44,12 +46,14 @@
     "nock": "^13.3.1",
     "sinon": "^9.2.4",
     "ts-jest": "^27.1.4",
-    "typedoc": "^0.24.8",
-    "typedoc-plugin-missing-exports": "^2.0.0",
-    "typescript": "~4.8.4"
+    "typedoc": "^0.22.15",
+    "typedoc-plugin-missing-exports": "^0.22.6",
+    "typescript": "~4.6.3"
   },
   "peerDependencies": {
-    "@metamask/network-controller": "^14.0.0"
+    "@metamask/approval-controller": "^3.5.1",
+    "@metamask/network-controller": "^12.1.2",
+    "@metamask/selected-network-controller": "^1.0.1"
   },
   "engines": {
     "node": ">=16.0.0"
