--- a/merged-packages/eth-json-rpc-provider/tsconfig.json
+++ b/merged-packages/eth-json-rpc-provider/tsconfig.json
@@ -1,12 +1,16 @@
 {
   "compilerOptions": {
     "esModuleInterop": true,
+    "exactOptionalPropertyTypes": true,
+    "forceConsistentCasingInFileNames": true,
     "lib": ["ES2020"],
     "module": "CommonJS",
     "moduleResolution": "node",
     "noEmit": true,
+    "noErrorTruncation": true,
+    "noUncheckedIndexedAccess": true,
     "strict": true,
-    "target": "es6"
+    "target": "es2017"
   },
   "exclude": ["./dist/**/*"]
 }
