deps(approval-controller): eth-rpc-errors -> @metamask/rpc-errors

--- a/packages/approval-controller/package.json
+++ b/packages/approval-controller/package.json
@@ -30,8 +30,8 @@
   },
   "dependencies": {
     "@metamask/base-controller": "^3.2.2",
+    "@metamask/rpc-errors": "^6.0.0",
     "@metamask/utils": "^8.1.0",
-    "eth-rpc-errors": "^4.0.2",
     "immer": "^9.0.6",
     "nanoid": "^3.1.31"
   },
