--- a/packages/permission-controller/package.json
+++ b/packages/permission-controller/package.json
@@ -32,10 +32,10 @@
     "@metamask/base-controller": "^3.2.1",
     "@metamask/controller-utils": "^5.0.0",
     "@metamask/json-rpc-engine": "^7.1.1",
+    "@metamask/rpc-errors": "^6.0.0",
     "@metamask/utils": "^8.1.0",
     "@types/deep-freeze-strict": "^1.1.0",
     "deep-freeze-strict": "^1.1.1",
-    "eth-rpc-errors": "^4.0.2",
     "immer": "^9.0.6",
     "nanoid": "^3.1.31"
   },
