--- a/packages/permission-controller/package.json
+++ b/packages/permission-controller/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@metamask/permission-controller",
   "version": "4.1.1",
-  "description": "Mediates access to JSON-RPC methods, used to interact with pieces of the MetaMask stack, via middleware for json-rpc-engine",
+  "description": "Mediates access to JSON-RPC methods, used to interact with pieces of the MetaMask stack, via middleware for @metamask/json-rpc-engine",
   "keywords": [
     "MetaMask",
     "Ethereum"
