--- a/packages/gas-fee-controller/tsconfig.json
+++ b/packages/gas-fee-controller/tsconfig.json
@@ -6,7 +6,8 @@
   "references": [
     { "path": "../base-controller" },
     { "path": "../controller-utils" },
-    { "path": "../network-controller" }
+    { "path": "../network-controller" },
+    { "path": "../polling-controller" }
   ],
   "include": ["../../types", "./src"]
 }
