--- a/merged-packages/eth-json-rpc-provider/package.json
+++ b/merged-packages/eth-json-rpc-provider/package.json
@@ -6,6 +6,7 @@
     "type": "git",
     "url": "https://github.com/MetaMask/eth-json-rpc-provider.git"
   },
+  "license": "ISC",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
