--- a/packages/transaction-controller/package.json
+++ b/packages/transaction-controller/package.json
@@ -36,6 +36,7 @@
     "@metamask/controller-utils": "workspace:^",
     "@metamask/network-controller": "workspace:^",
     "@metamask/swappable-obj-proxy": "^2.1.0",
+    "@metamask/utils": "^3.3.1",
     "async-mutex": "^0.2.6",
     "babel-runtime": "^6.26.0",
     "eth-block-tracker": "^7.0.1",
