--- a/package.json
+++ b/package.json
@@ -37,20 +37,20 @@
     "@lavamoat/allow-scripts": "^2.3.1",
     "@metamask/create-release-branch": "^1.1.0",
     "@metamask/eslint-config": "^12.2.0",
-    "@metamask/eslint-config-jest": "^12.0.0",
-    "@metamask/eslint-config-nodejs": "^12.0.0",
-    "@metamask/eslint-config-typescript": "^12.0.0",
+    "@metamask/eslint-config-jest": "^12.1.0",
+    "@metamask/eslint-config-nodejs": "^12.1.0",
+    "@metamask/eslint-config-typescript": "^12.1.0",
     "@metamask/eth-json-rpc-provider": "^1.0.0",
     "@metamask/utils": "^8.1.0",
-    "@types/node": "^16.18.24",
-    "@typescript-eslint/eslint-plugin": "^5.30.7",
-    "@typescript-eslint/parser": "^5.30.7",
+    "@types/node": "^16.18.54",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
     "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^2.5.0",
-    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jest": "^27.1.5",
-    "eslint-plugin-jsdoc": "^39.3.3",
+    "eslint-plugin-jsdoc": "^39.9.1",
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
@@ -60,7 +60,7 @@
     "json-rpc-engine": "^6.1.0",
     "nock": "^13.3.1",
     "prettier": "^2.7.1",
-    "prettier-plugin-packagejson": "^2.2.17",
+    "prettier-plugin-packagejson": "^2.4.5",
     "rimraf": "^3.0.2",
     "simple-git-hooks": "^2.8.0",
     "ts-node": "^10.9.1",
