--- a/packages/gas-fee-controller/package.json
+++ b/packages/gas-fee-controller/package.json
@@ -33,6 +33,7 @@
     "@metamask/controller-utils": "^5.0.1",
     "@metamask/eth-query": "^3.0.1",
     "@metamask/network-controller": "^13.0.1",
+    "@metamask/polling-controller": "^0.0.0",
     "@metamask/utils": "^8.1.0",
     "@types/uuid": "^8.3.0",
     "ethereumjs-util": "^7.0.10",
