--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
   "simple-git-hooks": {
     "pre-push": "yarn lint"
   },
+  "resolutions": {
+    "@metamask/rpc-methods@^0.38.1-flask.1": "patch:@metamask/rpc-methods@npm%3A0.38.1-flask.1#./.yarn/patches/@metamask-rpc-methods-npm-0.38.1-flask.1-081e1eb5b3.patch"
+  },
   "devDependencies": {
     "@lavamoat/allow-scripts": "^2.3.1",
     "@metamask/create-release-branch": "^1.1.0",
