--- a/packages/permission-controller/package.json
+++ b/packages/permission-controller/package.json
@@ -32,12 +32,12 @@
     "@metamask/approval-controller": "^3.5.2",
     "@metamask/base-controller": "^3.2.2",
     "@metamask/controller-utils": "^5.0.1",
+    "@metamask/json-rpc-engine": "^7.1.1",
+    "@metamask/rpc-errors": "^6.0.0",
     "@metamask/utils": "^8.1.0",
     "@types/deep-freeze-strict": "^1.1.0",
     "deep-freeze-strict": "^1.1.1",
-    "eth-rpc-errors": "^4.0.2",
     "immer": "^9.0.6",
-    "json-rpc-engine": "^6.1.0",
     "nanoid": "^3.1.31"
   },
   "devDependencies": {
