--- a/packages/transaction-controller/package.json
+++ b/packages/transaction-controller/package.json
@@ -36,6 +36,7 @@
     "@metamask/base-controller": "^3.2.2",
     "@metamask/controller-utils": "^5.0.1",
     "@metamask/eth-query": "^3.0.1",
+    "@metamask/gas-fee-controller": "7.0.1",
     "@metamask/metamask-eth-abis": "^3.0.0",
     "@metamask/network-controller": "^13.0.1",
     "@metamask/rpc-errors": "^6.0.0",
