--- a/packages/transaction-controller/tsconfig.json
+++ b/packages/transaction-controller/tsconfig.json
@@ -6,6 +6,7 @@
   "references": [
     { "path": "../base-controller" },
     { "path": "../controller-utils" },
+    { "path": "../gas-fee-controller" },
     { "path": "../network-controller" },
     { "path": "../approval-controller" }
   ],
