--- a/packages/assets-controllers/tsconfig.build.json
+++ b/packages/assets-controllers/tsconfig.build.json
@@ -10,7 +10,8 @@
     { "path": "../base-controller/tsconfig.build.json" },
     { "path": "../controller-utils/tsconfig.build.json" },
     { "path": "../network-controller/tsconfig.build.json" },
-    { "path": "../preferences-controller/tsconfig.build.json" }
+    { "path": "../preferences-controller/tsconfig.build.json" },
+    { "path": "../polling-controller/tsconfig.build.json" }
   ],
   "include": ["../../types", "./src"]
 }
